Fixed darkreader background (was invisible when enabled)

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -139,7 +139,7 @@
 .navImg {
   width: 100%;
   position: fixed;
-  z-index: -1;
+  z-index: 0;
 }
 
 .dropbtn {
